# libnfc

./: CMakeLists.txt  ChangeLog  README-Windows.md  README.md
cmake/: FixBundle.cmake.in
cmake/modules/: LibnfcDrivers.cmake
contrib/: windows.h
contrib/win32/: stdlib.c
examples/: CMakeLists.txt  nfc-poll.c
libnfc/: CMakeLists.txt  conf.c  nfc-internal.c  nfc.c
utils/: CMakeLists.txt  nfc-scan-device.c
